# Democode-TAKOYAKI-BETA001-0312

./: README.md  Release_to_customer.sh
boot/common/: Kconfig  Makefile  autoboot.c  bootm.c  cmd_bootframebuffer.c  cmd_bootlogo.c  cmd_mstar.c  cmd_nand.c  cmd_spi.c  env_nand.c  env_sf.c
boot/configs/: infinity2m_defconfig  infinity2m_spinand_defconfig  infinity2m_spinand_usb_defconfig  infinity2m_usb_defconfig  infinity6b0_spinand_defconfig
boot/drivers/mstar/: Kconfig  Makefile
boot/drivers/mstar/emac/: Makefile  mdrv_emac.c  mdrv_emac.h
boot/drivers/mstar/flash_isp/: drvDeviceInfo.c  drvDeviceInfo.h
boot/drivers/mstar/gpio/: drvGPIO.c  drvGPIO.h
boot/drivers/mstar/i2c/: mstar_i2c.c  mstar_i2c.h
boot/drivers/mstar/spinand/: drvSPINAND_api.c
boot/drivers/mstar/wdt/: ms_wdt.c
boot/drivers/mtd/nand/: nand_util.c
boot/include/configs/: infinity2m.h
kernel/: release_kernel_to_alkaid.sh
kernel/arch/arm/mach-sstar/: ms_chip.c  prof.c
kernel/drivers/sstar/adaptor/: linux-rtos-adaptor.c
kernel/drivers/sstar/clk/: ms_composite_clk.c
kernel/drivers/sstar/crypto/: mdrv_aes.c  mdrv_sha.c
kernel/drivers/sstar/dualos/: drv_dualos.c  interos_call.h  lock.h  rsq.c  sw_sem.c
kernel/drivers/sstar/emac/: mdrv_emac.c  mdrv_emac.h
kernel/drivers/sstar/flash_isp/: drvDeviceInfo.c  drvDeviceInfo.h  mtd_serflash.c  part_mxp.c
kernel/drivers/sstar/gpio/: mdrv_gpio_io.c
kernel/drivers/sstar/i2c/: ms_iic.c
kernel/drivers/sstar/include/: cam_os_util.h  cam_os_wrapper.h  drv_dualos.h  voltage_ctrl.h
kernel/drivers/sstar/ir/: ms_ir.c
kernel/drivers/sstar/ive/: mdrv_ive.c
kernel/drivers/sstar/mma_heap/: mdrv_mma_heap.c
kernel/drivers/sstar/msys/: ms_msys.c  ms_msys_perf_test.c
kernel/drivers/sstar/padmux/: mdrv_padmux.c
kernel/drivers/sstar/pwm/: mdrv_pwm.c
kernel/drivers/sstar/rtc/: ms_rtcpwc.c
kernel/drivers/sstar/sar/: mdrv_sar.c
kernel/drivers/sstar/sata_host/: mdr_sata_host_ahci_platform.c  mdr_sata_host_ahci_platform1.c  mdrv_sata_host.c  mdrv_sata_host1.c  mdrv_sata_host_ahci.c  mdrv_sata_host_ahci1.c
kernel/drivers/sstar/sdmmc/: ms_sdmmc_lnx.c
kernel/drivers/sstar/serial/: ms_uart.c
kernel/drivers/sstar/voltage/: voltage_ctrl.c
kernel/drivers/sstar/watchdog/: mdrv_wdt.c
kernel/drivers/usb/core/: hub.c
kernel/drivers/usb/host/: ehci-hcd.c
project/: .gitignore  .makefile.swo  makefile  setup_config.sh
project/board/i2m/mmap/: MMAP_I2M_128M.h  MMAP_I2M_256M.h  MMAP_I2M_64M.h
project/image/: boot.mk  image.mk  ota.mk
project/image/configs/i2m/: nor.ramfs.partition.config  nor.squashfs.p2.partition.boot.config  nor.squashfs.p2.partition.config  nor.squashfs.partition.config  rootfs.mk  rootfs_fastboot.mk  rootfs_recovery.mk  script_nand.mk  script_nand.mk.save  script_nor.mk  spinand.ramfs-squashfs.p2.partition.config  spinand.squashfs.partition.config  spinand.ubifs.p2.partition.boot.config  spinand.ubifs.p2.partition.boot.recovery.config  spinand.ubifs.p2.partition.config  spinand.ubifs.p2.partition.recovery.config  spinand.ubifs.partition.config
project/image/etc/: fstab
project/image/etc/init.d/: udhcpc.script
project/image/output/customer/: demo.sh  zkgui
project/image/output/images/: appconfigs.ubifs  auto_update.txt  dummy_pad  kernel  logo  upgrade_script.txt
project/kbuild/4.9.84/: .config  Makefile  Module.symvers  arch  drivers  include  scripts
project/release/customer_tailor/: nvr_i2m_display_fastboot_glibc_tailor.mk  nvr_i2m_display_glibc_tailor.mk
sdk/verify/: makefile
sdk/verify/application/: app.mk
sdk/verify/application/customer_zk/: image.mk
sdk/verify/application/customer_zk_player/: demo.sh  image.mk
sdk/verify/application/customer_zk_wifi/: image.mk
sdk/verify/application/customer_zk_wifi_fastboot/: demo.sh  image.mk
sdk/verify/application/jpeg2disp/: image.mk  run.sh
sdk/verify/application/smarthome/: demo.sh  fbdev.ini  image.mk
sdk/verify/application/smarttalk/demoApp/: CMakeLists.txt  build_sample.sh  cmdqueue.cpp  cmdqueue.h  demoApp.cpp  main_ui.cpp  main_ui.h  omron.cpp  omron.h  utility.cpp  utility.h
sdk/verify/application/smarttalk/demoApp/env/: gdb  run.sh
sdk/verify/application/smarttalk/demoApp/env/reg/: apple.ppm  arthur.ppm  李林.ppm  范志勇.ppm  陈晔.ppm
sdk/verify/application/smarttalk/demoApp/modules/include/common/: st_stream.h  st_usb.h  st_xmlprase.h
sdk/verify/application/smarttalk/demoApp/modules/src/ao/: CMakeLists.txt  st_ao.c
sdk/verify/application/smarttalk/demoApp/modules/src/common/: st_common.c
sdk/verify/application/smarttalk/demoApp/modules/src/disp/: CMakeLists.txt  st_disp.c
sdk/verify/application/smarttalk/demoApp/modules/src/font/: dot_matrix_font.c  gb2312_code.h
sdk/verify/application/smarttalk/demoApp/modules/src/gpio/: CMakeLists.txt  st_gpio.c
sdk/verify/application/smarttalk/demoApp/modules/src/socket/: st_socket.cpp
sdk/verify/application/smarttalk/demoApp/modules/src/stream/: st_stream.cpp
sdk/verify/application/smarttalk/demoApp/modules/src/system/: CMakeLists.txt  st_system.cpp
sdk/verify/application/smarttalk/demoApp/modules/src/usb/: CMakeLists.txt  st_usb.c
sdk/verify/application/smarttalk/demoApp/modules/src/vdec/: st_vdec.c
sdk/verify/application/smarttalk/demoApp/modules/src/venc/: st_venc.cpp
sdk/verify/application/smarttalk/demoApp/modules/src/voice/: CMakeLists.txt  st_voice.cpp
sdk/verify/application/smarttalk/demoApp/modules/src/voice/vif/: CMakeLists.txt  st_vif.c
sdk/verify/application/smarttalk/demoApp/modules/src/xmlprase/: CMakeLists.txt  st_xmlprase.c
sdk/verify/feature/disp/: prog  (+5 more)
sdk/verify/live555/: .cproject  .project
sdk/verify/mi_demo/: compile.mk
sdk/verify/module/: add-config.mk  clear-config.mk  makefile
(+2392 files in other folders)
